<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white"
    android:paddingStart="@dimen/horizontal_space"
    android:paddingTop="@dimen/screen_space"
    android:paddingEnd="@dimen/horizontal_space"
    android:paddingBottom="@dimen/vertical_space">

    <TextView
        android:id="@+id/register__text__title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_space"
        android:gravity="center"
        android:text="@string/register__title"
        android:textColor="@color/text_black"
        android:textSize="@dimen/title_size"
        app:layout_constraintEnd_toStartOf="@id/register__img__close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/register__img__close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_description__ic_close"
        android:src="@drawable/ic_close_black"
        app:layout_constraintBottom_toBottomOf="@id/register__text__title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/register__text__title" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/register__input__user"
        style="@style/RegisterInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/screen_space"
        android:hint="@string/register__hint_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register__text__title" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/register__input__email"
        style="@style/RegisterInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_space"
        android:hint="@string/register__hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register__input__user" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/register__input__password"
        style="@style/RegisterInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_space"
        android:hint="@string/register__hint_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register__input__email" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/register__input__password_repeat"
        style="@style/RegisterInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_space"
        android:hint="@string/register__hint_password_repeat"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register__input__password" />

    <CheckBox
        android:id="@+id/register__check__accept_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/text_grey"
        app:layout_constraintBottom_toBottomOf="@id/register__label__terms"
        app:layout_constraintStart_toStartOf="@id/register__input__password_repeat"
        app:layout_constraintTop_toTopOf="@id/register__label__terms" />

    <TextView
        android:id="@+id/register__label__terms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/screen_space"
        android:gravity="start"
        android:text="@string/register__accept_term"
        android:textColor="@color/text_black"
        android:textSize="@dimen/subtitle_size"
        app:layout_constraintEnd_toEndOf="@id/register__input__password_repeat"
        app:layout_constraintStart_toEndOf="@id/register__check__accept_terms"
        app:layout_constraintTop_toBottomOf="@id/register__input__password_repeat" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register__btn__create_account"
        style="@style/SecondaryFilledBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/screen_space"
        android:text="@string/register__create_account"
        app:layout_constraintEnd_toEndOf="@id/register__input__password_repeat"
        app:layout_constraintStart_toStartOf="@id/register__input__password_repeat"
        app:layout_constraintTop_toBottomOf="@id/register__label__terms" />

    <TextView
        android:id="@+id/register__text__have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_space"
        android:text="@string/register__have_account"
        android:textColor="@color/text_black"
        android:textSize="@dimen/subtitle_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register__btn__create_account" />

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/separator_height"
        android:layout_marginBottom="@dimen/vertical_space"
        android:background="@drawable/bg_separator"
        app:layout_constraintEnd_toEndOf="@id/register__text__have_account"
        app:layout_constraintStart_toStartOf="@id/register__text__have_account"
        app:layout_constraintTop_toBottomOf="@id/register__text__have_account" />

</androidx.constraintlayout.widget.ConstraintLayout>